--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CVNumeriqueCelineCagan</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/thjax/libs/popper.js/2.6.0/umd/popper.min.js">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Didact+Gothic&family=EB+Garamond&family=Parisienne&family=Raleway:wght@100&family=Satisfy&family=Tangerine:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets\css\style.css"/>
@@ -60,34 +60,23 @@
     </div>
 <!---------------------------------Formations et certifications-------------------------------------------->
     <div id="training" class="container-fluid rounded text-black-50">
-        <div class="row">
-            <div id="background-img" class="100w"></div>
-            <div class="dropdown col-lg-6">
-                <button class=" btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    FORMATIONS/CERTIFICATIONS
-                </button>
-                <div class="dropdown-menu col-lg-12 " aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">2021 - .NET/C# ​- Formation certifiante - LA MANU - École du numérique (400H) - Certification réussite</a>
-                  <a class="dropdown-item" href="#">2020 – Titre professionnel développeur web et web mobile - Diplôme obtenu</a>
-                  <a class="dropdown-item" href="#">2020 – OPQUAST ​- Bonnes pratiques et sensibilisation de la qualité web - 640 Points – Niveau Intermédiaire</a>
-                  <a class="dropdown-item" href="#">2019 – Développeur web et web mobile​- Formation certifiante - O'CLOCK - École du numérique (700H) - Certification réussite</a>
-                  <a class="dropdown-item" href="#">2005 – CSS Certificat de sécurité sauvetage Aéronautique - Diplôme obtenu</a>
-                  <a class="dropdown-item" href="#">2001 – Université Charles de Gaulle - Langue Civilisation étrangère Anglais - 1ère année</a>
-                  <a class="dropdown-item" href="#">2000 – Lycée Jean Monnet Bac - Action Communication commerciale - Diplôme obtenu</a>
+        <div class="row col-lg-12">
+                <table class=" translate-middle table table-bordered text-black-50">
+                    <tr scope="col"><strong>FORMATIONS & CERTIFICATIONS</strong></tr>   
+                <div>
+                  <th scope="row">2021 - .NET/C# ​- Formation certifiante - LA MANU - École du numérique (400H) - Certification réussite</th>
+                  <th scope="row">2020 – Titre professionnel développeur web et web mobile - Diplôme obtenu</th>
+                  <th scope="row">2019 – Développeur web et web mobile​- Formation certifiante - O'CLOCK - École du numérique (700H) - Certification réussite</th>
                 </div>
-              </div>
 <!---------------------------------Expériences Professionnelles-------------------------------------------->
-        <table class="col-lg-6 translate-middle table table-bordered text-black-50">
+        <table class="col-lg-12 translate-middle table table-bordered text-black-50">
             <thead>
-                <tr>
-                    <th scope="col">ANNEES</th>
-                    <th scope="col">EXPERIENCES PROFESSIONNELLES</th>
-                </tr>
+                <tr scope="col"><strong>ANNEES & EXPERIENCES PROFESSIONNELLES</strong></tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="row">2019</th>
-                    <td><strong>O'CLOCK 1mois environnement semi-entreprise/autonomie</strong> Projet de fin d'études en groupe. Conception et réalisation d'un site destiné aux particuliers et professionnels pour la santé et le suivi animalier des animaux. Site internet Pensobetes (Non disponible sur le web) API Symfony et React Réalisation personnelle de l'interface administrateur <br><strong>Technologies utilisées durant le projet entier :</strong> Github - Git - HTML/CSS - Bootstrap / Bulma - POO - PHP7 - MySQL, PMA - SYMFONY 4.3 - Modèle MVC - React </td>
+                    <td><strong>O'CLOCK 1mois environnement semi-entreprise/thutonomie</strong> Projet de fin d'études en groupe. Conception et réalisation d'un site destiné aux particuliers et professionnels pour la santé et le suivi animalier des animaux. Site internet Pensobetes (Non disponible sur le web) API Symfony et React Réalisation personnelle de l'interface administrateur <br><strong>Technologies utilisées durant le projet entier :</strong> Github - Git - HTML/CSS - Bootstrap / Bulma - POO - PHP7 - MySQL, PMA - SYMFONY 4.3 - Modèle MVC - React </td>
                 </tr>
                 <tr>
                     <th scope="row">2016-2018
@@ -118,7 +107,7 @@
     </div>
     </div>
 </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/thjax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
