--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="row text-left">
         <img class="img-fluid col-lg-2 rounded-circle w-50 align-center" src="assets\img\Screenshot_2021-01-24 Céline Cagan LinkedIn.png" alt="photographie de moi">
         <div class="col-10">
-            <h1>Céline Cagan</h1>
-            <h2>Dévelopeuse Web</h2>
+            <h1><strong>Céline Cagan</strong><br></h1>
+            <h2>Dévelopeuse Web</h2><br>
             <p>Dévouée à mon travail, je possède une grande expérience de travail au sein d'équipes performantes pour atteindre, voir dépasser les objectifs fixés. Professionnelle acharnée et volontaire, je vise toujours à fournir un service d'excellence. Je sais trouver ma place parmi les équipes et participe à la cohésion de groupe.</p>
         </div>
         <div id="icons" class="row col-lg-12 text-center justify-content-lg-center text-black-50">
@@ -41,9 +41,6 @@
 </div>
 <!---------------------------------Compétences-------------------------------------------->
     <div id ="skills" class="container-fluid rounded text-center text-black-50">
-        <div id="titleSkills" class="text-black-50">
-            <h3>Compétences</h3>
-        </div>
     <div id="humanSkills" class="row">
         <h5 class="col-lg-3"><span class="badge">Attentionnée</span></h5>
         <h5 class="col-lg-3"><span class="badge">Capacité d'adaptation</span></h5>
@@ -96,13 +93,13 @@
     <div id="links" class="container-fluid rounded text-center">
     <div class="row">
         <div class="col-lg-4">
-        <a href="http://github.com/Cline9951" class="badge badge-info text-black-50">Page GitHub</a>
+        <a href="http://github.com/Cline9951" class="badgeLinks rounded text-black-50">Page GitHub</a>
         </div>
         <div class="col-lg-4">
-        <a href="http://youtu.be/g9pvxp4GsPM" class="badge badge-info text-black-50">Projet d'étude</a>
+        <a href="http://youtu.be/g9pvxp4GsPM" class="badgeLinks rounded text-black-50">Projet d'étude</a>
         </div>
         <div class="col-lg-4">
-        <a href="http://www.linkedin.com/in/céline-cagan" class="badge badge-info text-black-50">Page Linkedin</a>
+        <a href="http://www.linkedin.com/in/céline-cagan" class="badgeLinks rounded text-black-50">Page Linkedin</a>
         </div>
     </div>
     </div>
