--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
             <table class=" translate-middle table table-bordered text-black-50">
                 <tr scope="col"><strong>FORMATIONS & CERTIFICATIONS</strong></tr>   
                 <div>
-                    <th scope="row">2021 - .NET/C# ​- Formation certifiante - LA MANU - École du numérique (400H) - Certification réussite</th>
-                    <th scope="row">2020 – Titre professionnel développeur web et web mobile - Diplôme obtenu</th>
-                    <th scope="row">2019 – Développeur web et web mobile​- Formation certifiante - O'CLOCK - École du numérique (700H) - Certification réussite</th>
+                    <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique  ​- Formation certifiante - M2I - École du numérique (1120H)</th>
+                    <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) - Certification réussite</th>
+                    <th scope="row">2020 – Titre professionnel Développeuse web et web mobile - Diplôme obtenu</th>
+                    <th scope="row">2019 – Développeuse web et web mobile ​- O'CLOCK - École du numérique (700H) - Certification réussite</th>
                 </div>
 <!---------------------------------Expériences Professionnelles-------------------------------------------->
                 <table class="col-lg-12 translate-middle table table-bordered text-black-50">
@@ -71,6 +72,10 @@
                         <tr scope="col"><strong>ANNEES & EXPERIENCES PROFESSIONNELLES</strong></tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <th scope="row">2021</th>
+                            <td><strong>STOKOMANI</strong><br>Développeuse junior - avril à août</td>
+                        </tr>
                         <tr>
                             <th scope="row">2019</th>
                             <td><strong>O'CLOCK 1mois environnement semi-entreprise/thutonomie</strong> Projet de fin d'études en groupe. Conception et réalisation d'un site destiné aux particuliers et professionnels pour la santé et le suivi animalier des animaux. Site internet Pensobetes (Non disponible sur le web) API Symfony et React Réalisation personnelle de l'interface administrateur <br><strong>Technologies utilisées durant le projet entier :</strong> Github - Git - HTML/CSS - Bootstrap / Bulma - POO - PHP7 - MySQL, PMA - SYMFONY 4.3 - Modèle MVC - React </td>
