--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="training" class="container-fluid rounded text-black-50">
         <div class="row col-lg-12">
             <table class=" translate-middle table table-bordered text-black-50">
-                <tr scope="col"><strong>FORMATIONS & CERTIFICATIONS</strong></tr>   
+                <tr scope="col"><strong>FORMATIONS</strong></tr>   
                 <div>
                     <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique  ​- Formation certifiante - M2I - École du numérique (1120H)</th>
                     <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) - Certification réussite</th>
@@ -69,7 +69,7 @@
 <!---------------------------------Expériences Professionnelles-------------------------------------------->
                 <table class="col-lg-12 translate-middle table table-bordered text-black-50">
                     <thead>
-                        <tr scope="col"><strong>ANNEES & EXPERIENCES PROFESSIONNELLES</strong></tr>
+                        <tr scope="col"><strong>EXPERIENCES PROFESSIONNELLES</strong></tr>
                     </thead>
                     <tbody>
                         <tr>
