--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <table class=" translate-middle table table-bordered text-black-50">
                 <tr scope="col"><strong>FORMATIONS</strong></tr>   
                 <div>
-                    <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique  ​- Formation certifiante - M2I - École du numérique (1120H)</th>
-                    <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) - Certification réussite</th>
+                    <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique en présentiel ​- Formation certifiante - M2I - École du numérique (1120H)</th>
+                    <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) en présentiel - Certification réussite</th>
                     <th scope="row">2020 – Titre professionnel Développeuse web et web mobile - Diplôme obtenu</th>
-                    <th scope="row">2019 – Développeuse web et web mobile ​- O'CLOCK - École du numérique (700H) - Certification réussite</th>
+                    <th scope="row">2019 – Développeuse web et web mobile ​- O'CLOCK - École du numérique (700H) en distanciel - Certification réussite</th>
                 </div>
 <!---------------------------------Expériences Professionnelles-------------------------------------------->
                 <table class="col-lg-12 translate-middle table table-bordered text-black-50">
@@ -78,7 +78,7 @@
                         </tr>
                         <tr>
                             <th scope="row">2019</th>
-                            <td><strong>O'CLOCK 1mois environnement semi-entreprise/thutonomie</strong> Projet de fin d'études en groupe. Conception et réalisation d'un site destiné aux particuliers et professionnels pour la santé et le suivi animalier des animaux. Site internet Pensobetes (Non disponible sur le web) API Symfony et React Réalisation personnelle de l'interface administrateur <br><strong>Technologies utilisées durant le projet entier :</strong> Github - Git - HTML/CSS - Bootstrap / Bulma - POO - PHP7 - MySQL, PMA - SYMFONY 4.3 - Modèle MVC - React </td>
+                            <td><strong>O'CLOCK projet de fin d'études de groupe, 1 mois réalisé en environnement semi-entreprise et distanciel.</strong> Conception et réalisation d'un site destiné aux particuliers et professionnels pour la santé des animaux. Site internet Pensobetes (non disponible en ligne) ​- Réalisation personnelle de l'interface administrateur. <br><strong>Programmes Front-End :</strong> CSS/ Bootstrap / REACT <strong> Programmes Back-End :</strong> PHP7 - SYMFONY 4.3 <strong> Base de données :</strong> MySQL ​- PMA <strong> Workflow :</strong> Git - GitHub <strong> Outils de communication :</strong> Discord - Trello <strong> Méthodologies :</strong> Agile - Scrum</td>
                         </tr>
                         <tr>
                             <th scope="row">2016-2018
