--- a/index.html
+++ b/index.html
@@ -58,16 +58,24 @@
 <!---------------------------------Formations et certifications-------------------------------------------->
     <div id="training" class="container-fluid rounded text-black-50">
         <div class="row col-lg-12">
-            <table class=" translate-middle table table-bordered text-black-50">
+            <table class="table table-bordered text-black-50">
                 <tr scope="col"><strong>FORMATIONS</strong></tr>   
                 <div>
-                    <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique en présentiel ​- Formation certifiante - M2I - École du numérique (1120H)</th>
-                    <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) en présentiel - Certification réussite</th>
-                    <th scope="row">2020 – Titre professionnel Développeuse web et web mobile - Diplôme obtenu</th>
-                    <th scope="row">2019 – Développeuse web et web mobile ​- O'CLOCK - École du numérique (700H) en distanciel - Certification réussite</th>
+                    <tr>
+                        <th scope="row">2022 - En préparation 15/11/2021 au 06/07/2022 Conceptrice d'applications en informatique en présentiel ​- Formation certifiante - M2I - École du numérique (1120H)</th>
+                    </tr>
+                    <tr>
+                        <th scope="row">2021 - .NET/C# ​- LA MANU - École du numérique (400H) en présentiel - Certification réussite</th>
+                    </tr>
+                    <tr>
+                        <th scope="row">2020 – Titre professionnel Développeuse web et web mobile - Diplôme obtenu</th>
+                    </tr>
+                    <tr>
+                        <th scope="row">2019 – Développeuse web et web mobile ​- O'CLOCK - École du numérique (700H) en distanciel - Certification réussite</th>
+                    </tr>
                 </div>
 <!---------------------------------Expériences Professionnelles-------------------------------------------->
-                <table class="col-lg-12 translate-middle table table-bordered text-black-50">
+                <table class="table table-bordered text-black-50">
                     <thead>
                         <tr scope="col"><strong>EXPERIENCES PROFESSIONNELLES</strong></tr>
                     </thead>
